KCallable to CallExternal + tests

--- a/lib/Module/CMakeLists.txt
+++ b/lib/Module/CMakeLists.txt
@@ -12,6 +12,7 @@ set(KLEE_MODULE_COMPONENT_SRCS
   InstructionInfoTable.cpp
   InstructionOperandTypeCheckPass.cpp
   IntrinsicCleaner.cpp
+  KCallable.cpp
   KInstruction.cpp
   KModule.cpp
   LowerSwitch.cpp
