create class ObjectManager
add methods and fields in ObjectManager for work with states
change executeAction in Executor

--- a/lib/Core/CMakeLists.txt
+++ b/lib/Core/CMakeLists.txt
@@ -38,6 +38,7 @@ klee_add_component(kleeCore
   Database.cpp
 
   SeedMap.cpp
+  ObjectManager.cpp
 )
 
 # TODO: Work out what the correct LLVM components are for
